update link and secure external deps with https

--- a/documentation.html
+++ b/documentation.html
@@ -102,7 +102,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto menu">
       	<li class="nav-item">
-          <a class="nav-link" target="_blank" href="http://demo.themefisher.com/enov-hugo/">Demo</a>
+          <a class="nav-link" target="_blank" href="https://demo.themefisher.com/enov-hugo/">Demo</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" target="_blank" href="https://themefisher.com/submit-ticket/">Support</a>
@@ -120,7 +120,7 @@
 				<h1>Enov hugo Documentation</h1>
 				<h3>Last Update: 17/9/2019</h3>
 				<p>We are constantly doing updates for you. Please check the online documentation.</p>
-				<a href="http://documentation.themefisher.com/docs/enov-hugo/" class="btn btn-main-rounded">View Online Documentation</a>
+				<a href="https://documentation.themefisher.com/docs/enov-hugo/" class="btn btn-main-rounded">View Online Documentation</a>
 			</div>
 		</div>
 	</div>
